# tanchiki

./: 1.txt  AIScene.cpp  AIScene.h  AbstractScene.cpp  AbstractScene.h  CMakeLists.txt  ControllerScene.cpp  ControllerScene.h  DrawScene.cpp  DrawScene.h  InterfaseScene.cpp  InterfaseScene.h  PhisicalScene.cpp  PhisicalScene.h  PlayerController.cpp  PlayerController.h  PleerController.cpp  PleerController.h  README.md  SoundScene.cpp  SoundScene.h  client.cpp  internet_communication.cpp  internet_communication.h  main.cpp  player.cpp  player.h  документация на протокол связи с сервером.txt
levels/: 1.txt
